# cimg_additions

./: .gitignore  CMakeLists.txt  README.md  cimg-all.h
additions/: cimg-hdr.h  cimg-ppm.h  cimg-tmo.h
main/: image2ppm.cc  tonemap.cc
